--- a/frontend/public/locales/zh/translation.json
+++ b/frontend/public/locales/zh/translation.json
@@ -1,8 +1,13 @@
 {
-  "header": {"login": "登录", "get_started": "开始"},
-  "nav": {"home": "首页", "about": "关于", "pricing": "价格", "contact": "联系", "login": "登录"},
+  "header": {"login": "登录", "get_started": "开始使用"},
+  "nav": {"home": "首页", "about": "关于", "pricing": "定价", "contact": "联系", "login": "登录"},
   "auth": {"welcome_back": "欢迎回来！", "sign_in_subtitle": "登录以继续", "email_address": "邮箱地址", "password": "密码", "sign_in": "登录", "continue_google": "使用Google继续", "no_account": "没有账户？", "sign_up": "注册", "or": "或", "forgot_password": "忘记密码？"},
-  "common": {"loading": "加载中...", "error": "错误", "success": "成功", "cancel": "取消", "save": "保存"},
-  "dashboard": {"overview": "概览", "properties": "房产", "tenants": "租户", "settings": "设置", "logout": "退出", "maintenance": "维护"},
-  "landing": {"hero_title": "现代房产管理一体化平台", "hero_subtitle": "自动化任务，轻松管理租户。", "hero_cta": "免费试用"}
+  "common": {"loading": "加载中...", "error": "错误", "success": "成功", "cancel": "取消", "save": "保存", "edit": "编辑", "delete": "删除", "add": "添加", "view": "查看", "close": "关闭", "confirm": "确认", "yes": "是", "no": "否", "learn_more": "了解更多", "analytics": "分析", "payments": "支付", "actions": "操作", "status": "状态", "name": "姓名", "email": "邮箱", "phone": "电话", "address": "地址", "city": "城市", "state": "省份", "zip_code": "邮编", "country": "国家", "date": "日期", "amount": "金额", "description": "描述", "type": "类型", "active": "活跃", "inactive": "非活跃", "pending": "待处理", "approved": "已批准", "rejected": "已拒绝", "all_languages": "所有语言", "theme": "主题", "language": "语言", "notifications": "通知", "profile": "个人资料", "settings": "设置"},
+  "dashboard": {"overview": "概览", "properties": "房产", "tenants": "租户", "settings": "设置", "logout": "退出", "maintenance": "维护", "expenses": "支出", "cash_flow": "现金流", "reminders": "提醒", "approvals": "审批", "users_invites": "用户与邀请", "billing": "账单", "audit_log": "审计日志", "admin_panel": "管理面板", "monthly_revenue": "月收入", "total_properties": "总房产数", "active_tenants": "活跃租户", "occupancy_rate": "入住率", "tenant_profile": "租户档案", "lease_information": "租赁信息", "pending_approval_requests": "待审批请求", "no_pending_requests": "无待处理请求", "manage_account_preferences": "管理账户和偏好设置", "profile_information": "个人资料信息", "email_notifications": "邮件通知", "push_notifications": "推送通知", "automated_reminders": "自动提醒", "add_new_reminder": "添加新提醒", "no_automated_reminders": "未配置自动提醒", "tenant": "租户", "next_send": "下次发送", "frequency": "频率"},
+  "landing": {"hero_title": "现代房产管理的一体化平台", "hero_subtitle": "自动化任务，跟踪财务，轻松管理租户。", "hero_cta": "开始免费试用", "real_stats_title": "受到全球房产管理者信赖", "properties_managed": "管理房产", "active_users": "活跃用户", "countries_served": "服务国家", "uptime_guarantee": "正常运行时间保证"},
+  "pricing": {"free": "免费", "choose_plan": "选择计划", "monthly": "月付", "yearly": "年付", "per_month": "每月", "per_year": "每年", "most_popular": "最受欢迎", "get_started": "开始使用", "contact_sales": "联系销售"},
+  "forms": {"street_address": "街道地址", "required_field": "此字段为必填项", "invalid_email": "请输入有效的邮箱地址", "password_too_short": "密码至少需要8个字符", "passwords_dont_match": "密码不匹配"},
+  "property": {"add_property": "添加房产", "edit_property": "编辑房产", "property_name": "房产名称", "property_type": "房产类型", "apartment": "公寓", "house": "房屋", "commercial": "商业", "other": "其他", "rent_amount": "租金金额", "security_deposit": "押金", "available_units": "可用单元", "total_units": "总单元数"},
+  "tenant": {"add_tenant": "添加租户", "edit_tenant": "编辑租户", "tenant_name": "租户姓名", "lease_start": "租赁开始", "lease_end": "租赁结束", "rent_due_date": "租金到期日", "late": "逾期", "id_front": "身份证正面", "id_back": "身份证背面"},
+  "expense": {"add_expense": "添加支出", "edit_expense": "编辑支出", "expense_category": "支出类别", "insurance": "保险", "taxes": "税费", "salary": "工资", "maintenance_repair": "维护修理", "utilities": "公用事业", "advertising": "广告", "legal_professional": "法律专业", "travel": "差旅", "office_supplies": "办公用品"}
 }
