--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -1,13 +1,245 @@
 {
-  "header": {"login": "Connexion", "get_started": "Commencer"},
-  "nav": {"home": "Accueil", "about": "À propos", "pricing": "Tarifs", "contact": "Contact", "login": "Connexion"},
-  "auth": {"welcome_back": "Bon retour!", "sign_in_subtitle": "Connectez-vous pour continuer", "email_address": "Adresse e-mail", "password": "Mot de passe", "sign_in": "Se connecter", "continue_google": "Continuer avec Google", "no_account": "Pas de compte?", "sign_up": "S'inscrire", "or": "OU", "forgot_password": "Mot de passe oublié?"},
-  "common": {"loading": "Chargement...", "error": "Erreur", "success": "Succès", "cancel": "Annuler", "save": "Sauvegarder", "edit": "Modifier", "delete": "Supprimer", "add": "Ajouter", "view": "Voir", "close": "Fermer", "confirm": "Confirmer", "yes": "Oui", "no": "Non", "learn_more": "En Savoir Plus", "analytics": "Analytiques", "payments": "Paiements", "actions": "Actions", "status": "Statut", "name": "Nom", "email": "E-mail", "phone": "Téléphone", "address": "Adresse", "city": "Ville", "state": "État", "zip_code": "Code Postal", "country": "Pays", "date": "Date", "amount": "Montant", "description": "Description", "type": "Type", "active": "Actif", "inactive": "Inactif", "pending": "En attente", "approved": "Approuvé", "rejected": "Rejeté", "all_languages": "Toutes les Langues", "theme": "Thème", "language": "Langue", "notifications": "Notifications", "profile": "Profil", "settings": "Paramètres", "search": "Rechercher...", "filter": "Filtres", "clear_all": "Tout Effacer", "all": "Tous", "more_options": "Plus d'Options", "quick_links": "Liens Rapides", "legal": "Légal", "about": "À Propos", "features": "Fonctionnalités", "privacy_policy": "Politique de Confidentialité", "terms_of_service": "Conditions de Service", "property_management": "Gestion Immobilière"},
-  "dashboard": {"overview": "Aperçu", "properties": "Propriétés", "tenants": "Locataires", "settings": "Paramètres", "logout": "Déconnexion", "maintenance": "Maintenance", "expenses": "Dépenses", "cash_flow": "Flux de Trésorerie", "reminders": "Rappels", "approvals": "Approbations", "users_invites": "Utilisateurs et Invitations", "billing": "Facturation", "audit_log": "Journal d'Audit", "admin_panel": "Panneau d'Administration", "monthly_revenue": "Revenus Mensuels", "total_properties": "Total des Propriétés", "active_tenants": "Locataires Actifs", "occupancy_rate": "Taux d'Occupation", "tenant_profile": "Profil du Locataire", "lease_information": "Informations du Bail", "pending_approval_requests": "Demandes d'Approbation en Attente", "no_pending_requests": "Aucune Demande en Attente", "manage_account_preferences": "Gérez votre compte et préférences", "profile_information": "Informations du Profil", "email_notifications": "Notifications E-mail", "push_notifications": "Notifications Push", "automated_reminders": "Rappels Automatiques", "add_new_reminder": "Ajouter un Nouveau Rappel", "no_automated_reminders": "Aucun Rappel Automatique Configuré", "tenant": "Locataire", "next_send": "Prochain Envoi", "frequency": "Fréquence", "payments": "Paiements"},
-  "landing": {"hero_title": "La Plateforme Tout-en-Un pour la Gestion Immobilière Moderne", "hero_subtitle": "Automatisez les tâches, suivez les finances et gérez les locataires facilement.", "hero_cta": "Commencez votre Essai Gratuit", "real_stats_title": "Approuvé par les Gestionnaires Immobiliers du Monde Entier", "properties_managed": "Propriétés Gérées", "active_users": "Utilisateurs Actifs", "countries_served": "Pays Desservis", "uptime_guarantee": "Garantie de Disponibilité"},
-  "pricing": {"free": "Gratuit", "choose_plan": "Choisir un Plan", "monthly": "Mensuel", "yearly": "Annuel", "per_month": "par mois", "per_year": "par an", "most_popular": "Le Plus Populaire", "get_started": "Commencer", "contact_sales": "Contacter les Ventes"},
-  "forms": {"street_address": "Adresse", "required_field": "Ce champ est obligatoire", "invalid_email": "Veuillez entrer un e-mail valide", "password_too_short": "Le mot de passe doit contenir au moins 8 caractères", "passwords_dont_match": "Les mots de passe ne correspondent pas"},
-  "property": {"add_property": "Ajouter une Propriété", "edit_property": "Modifier la Propriété", "property_name": "Nom de la Propriété", "property_type": "Type de Propriété", "apartment": "Appartement", "house": "Maison", "commercial": "Commercial", "other": "Autre", "rent_amount": "Montant du Loyer", "security_deposit": "Dépôt de Garantie", "available_units": "Unités Disponibles", "total_units": "Total des Unités", "loading_properties": "Chargement des propriétés...", "manage_portfolio": "Gérez votre portefeuille immobilier", "view": "Voir", "edit": "Modifier", "no_properties_yet": "Aucune Propriété Pour l'Instant"},
-  "tenant": {"add_tenant": "Ajouter un Locataire", "edit_tenant": "Modifier le Locataire", "tenant_name": "Nom du Locataire", "lease_start": "Début du Bail", "lease_end": "Fin du Bail", "rent_due_date": "Date d'Échéance du Loyer", "late": "En Retard", "id_front": "ID Recto", "id_back": "ID Verso"},
-  "expense": {"add_expense": "Ajouter une Dépense", "edit_expense": "Modifier la Dépense", "expense_category": "Catégorie de Dépense", "insurance": "Assurance", "taxes": "Impôts", "salary": "Salaire", "maintenance_repair": "Maintenance et Réparation", "utilities": "Services Publics", "advertising": "Publicité", "legal_professional": "Juridique et Professionnel", "travel": "Voyage", "office_supplies": "Fournitures de Bureau"}
+  "header": {
+    "login": "Connexion",
+    "get_started": "Commencer"
+  },
+  "nav": {
+    "home": "Accueil",
+    "about": "À propos",
+    "pricing": "Tarifs",
+    "contact": "Contact",
+    "login": "Connexion"
+  },
+  "auth": {
+    "welcome_back": "Welcome Back!",
+    "sign_in_subtitle": "Sign in to continue to your dashboard",
+    "email_address": "Email Address",
+    "password": "Password",
+    "sign_in": "Sign In",
+    "continue_google": "Continue with Google",
+    "no_account": "Don't have an account?",
+    "sign_up": "Sign Up",
+    "or": "OR",
+    "forgot_password": "Forgot Password?",
+    "enter_email": "Enter your email address",
+    "enter_password": "Enter your password",
+    "remember_me": "Remember me",
+    "create_account": "Create Account",
+    "full_name": "Full Name",
+    "confirm_password": "Confirm Password",
+    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
+    "agent": "Agent",
+    "check_email": "Check your email for verification link",
+    "create_password": "Create a strong password",
+    "enter_full_name": "Enter your full name",
+    "go_to_login": "Go to Login",
+    "have_account": "Already have an account?",
+    "join_thousands": "Join thousands of property managers",
+    "landlord": "Landlord",
+    "role": "Role",
+    "tenant": "Tenant",
+    "verification_sent": "Verification email sent"
+  },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "view": "View",
+    "close": "Close",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
+    "welcome_back_user": "Welcome back, {{name}}!",
+    "happening_today": "Here's what's happening with your properties today.",
+    "learn_more": "Learn More",
+    "analytics": "Analytics",
+    "payments": "Payments",
+    "actions": "Actions",
+    "status": "Status",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "country": "Country",
+    "date": "Date",
+    "amount": "Amount",
+    "description": "Description",
+    "type": "Type",
+    "active": "Active",
+    "inactive": "Inactive",
+    "pending": "Pending",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "all_languages": "All Languages",
+    "theme": "Theme",
+    "language": "Language",
+    "notifications": "Notifications",
+    "profile": "Profile",
+    "settings": "Settings",
+    "search": "Search...",
+    "filter": "Filters",
+    "clear_all": "Clear All",
+    "all": "All",
+    "more_options": "More Options",
+    "quick_links": "Quick Links",
+    "legal": "Legal",
+    "about": "About",
+    "features": "Features",
+    "privacy_policy": "Privacy Policy",
+    "terms_of_service": "Terms of Service",
+    "property_management": "Property Management"
+  },
+  "dashboard": {
+    "overview": "Overview",
+    "properties": "Properties",
+    "tenants": "Tenants",
+    "settings": "Settings",
+    "logout": "Logout",
+    "maintenance": "Maintenance",
+    "expenses": "Expenses",
+    "cash_flow": "Cash Flow",
+    "reminders": "Reminders",
+    "approvals": "Approvals",
+    "users_invites": "Users & Invites",
+    "billing": "Billing",
+    "audit_log": "Audit Log",
+    "admin_panel": "Admin Panel",
+    "monthly_revenue": "Monthly Revenue",
+    "total_properties": "Total Properties",
+    "active_tenants": "Active Tenants",
+    "occupancy_rate": "Occupancy Rate",
+    "loading_data": "Loading dashboard data...",
+    "overdue_rent_reminders": "Overdue Rent Reminders",
+    "send_reminder": "Send Reminder",
+    "no_overdue_rent": "No overdue rent payments",
+    "upcoming_lease_expirations": "Upcoming Lease Expirations",
+    "renew_lease": "Renew Lease",
+    "no_expiring_leases": "No expiring leases",
+    "financials_chart_title": "Financial Overview",
+    "rent_status_chart_title": "Rent Status",
+    "tenant_profile": "Tenant Profile",
+    "lease_information": "Lease Information",
+    "pending_approval_requests": "Pending Approval Requests",
+    "no_pending_requests": "No Pending Requests",
+    "manage_account_preferences": "Manage your account and preferences",
+    "profile_information": "Profile Information",
+    "email_notifications": "Email Notifications",
+    "push_notifications": "Push Notifications",
+    "automated_reminders": "Automated Reminders",
+    "add_new_reminder": "Add New Reminder",
+    "no_automated_reminders": "No Automated Reminders Configured",
+    "tenant": "Tenant",
+    "next_send": "Next Send",
+    "frequency": "Frequency",
+    "payments": "Payments"
+  },
+  "landing": {
+    "hero_title": "The All-in-One Platform for Modern Property Management",
+    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease.",
+    "hero_cta": "Start Your Free Trial",
+    "real_stats_title": "Trusted by Property Managers Worldwide",
+    "properties_managed": "Properties Managed",
+    "active_users": "Active Users",
+    "countries_served": "Countries Served",
+    "uptime_guarantee": "Uptime Guarantee"
+  },
+  "pricing": {
+    "free": "Free",
+    "choose_plan": "Choose Plan",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "per_month": "per month",
+    "per_year": "per year",
+    "most_popular": "Most Popular",
+    "get_started": "Get Started",
+    "contact_sales": "Contact Sales"
+  },
+  "services": {
+    "title": "Nos Services",
+    "subtitle": "Solutions complètes de gestion immobilière",
+    "property_tracking_title": "Suivi des Propriétés",
+    "property_tracking_desc": "Suivez toutes vos propriétés en un seul endroit",
+    "rent_collection_title": "Collecte de Loyer",
+    "rent_collection_desc": "Collecte automatique de loyer et rappels",
+    "tenant_management_title": "Gestion des Locataires",
+    "tenant_management_desc": "Gérez les locataires et les contrats de bail"
+  },
+  "install_app": {
+    "title": "Installer Notre App",
+    "subtitle": "Obtenez l'expérience mobile native"
+  },
+  "forms": {
+    "street_address": "Street Address",
+    "required_field": "This field is required",
+    "invalid_email": "Please enter a valid email address",
+    "password_too_short": "Password must be at least 8 characters",
+    "passwords_dont_match": "Passwords don't match"
+  },
+  "property": {
+    "add_property": "Add Property",
+    "edit_property": "Edit Property",
+    "property_name": "Property Name",
+    "property_type": "Property Type",
+    "apartment": "Apartment",
+    "house": "House",
+    "commercial": "Commercial",
+    "other": "Other",
+    "rent_amount": "Rent Amount",
+    "security_deposit": "Security Deposit",
+    "available_units": "Available Units",
+    "total_units": "Total Units",
+    "loading_properties": "Loading properties...",
+    "manage_portfolio": "Manage your property portfolio",
+    "view": "View",
+    "edit": "Edit",
+    "no_properties_yet": "No Properties Yet",
+    "add_first_property": "Add Your First Property",
+    "add_new_property": "Add New Property",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "click_to_upload": "Click to upload image",
+    "enter_property_name": "Enter property name",
+    "inactive": "Inactive",
+    "active": "Active",
+    "number_of_units": "Number of Units",
+    "property_image": "Property Image",
+    "save_property": "Save Property",
+    "street_address": "Street Address",
+    "units": "Units"
+  },
+  "tenant": {
+    "add_tenant": "Add Tenant",
+    "edit_tenant": "Edit Tenant",
+    "tenant_name": "Tenant Name",
+    "lease_start": "Lease Start",
+    "lease_end": "Lease End",
+    "rent_due_date": "Rent Due Date",
+    "late": "Late",
+    "id_front": "ID Front",
+    "id_back": "ID Back"
+  },
+  "expense": {
+    "add_expense": "Add Expense",
+    "edit_expense": "Edit Expense",
+    "expense_category": "Expense Category",
+    "insurance": "Insurance",
+    "taxes": "Taxes",
+    "salary": "Salary",
+    "maintenance_repair": "Maintenance & Repair",
+    "utilities": "Utilities",
+    "advertising": "Advertising",
+    "legal_professional": "Legal & Professional",
+    "travel": "Travel",
+    "office_supplies": "Office Supplies"
+  }
 }
