--- a/frontend/public/locales/de/translation.json
+++ b/frontend/public/locales/de/translation.json
@@ -1,13 +1,245 @@
 {
-  "header": {"login": "Anmelden", "get_started": "Loslegen"},
-  "nav": {"home": "Startseite", "about": "Über uns", "pricing": "Preise", "contact": "Kontakt", "login": "Anmelden"},
-  "auth": {"welcome_back": "Willkommen zurück!", "sign_in_subtitle": "Anmelden um fortzufahren", "email_address": "E-Mail-Adresse", "password": "Passwort", "sign_in": "Anmelden", "continue_google": "Mit Google fortfahren", "no_account": "Kein Konto?", "sign_up": "Registrieren", "or": "ODER", "forgot_password": "Passwort vergessen?"},
-  "common": {"loading": "Laden...", "error": "Fehler", "success": "Erfolg", "cancel": "Abbrechen", "save": "Speichern", "edit": "Bearbeiten", "delete": "Löschen", "add": "Hinzufügen", "view": "Ansehen", "close": "Schließen", "confirm": "Bestätigen", "yes": "Ja", "no": "Nein", "learn_more": "Mehr Erfahren", "analytics": "Analytik", "payments": "Zahlungen", "actions": "Aktionen", "status": "Status", "name": "Name", "email": "E-Mail", "phone": "Telefon", "address": "Adresse", "city": "Stadt", "state": "Bundesland", "zip_code": "Postleitzahl", "country": "Land", "date": "Datum", "amount": "Betrag", "description": "Beschreibung", "type": "Typ", "active": "Aktiv", "inactive": "Inaktiv", "pending": "Ausstehend", "approved": "Genehmigt", "rejected": "Abgelehnt", "all_languages": "Alle Sprachen", "theme": "Design", "language": "Sprache", "notifications": "Benachrichtigungen", "profile": "Profil", "settings": "Einstellungen", "search": "Suchen...", "filter": "Filter", "clear_all": "Alle Löschen", "all": "Alle", "more_options": "Weitere Optionen", "quick_links": "Schnelllinks", "legal": "Rechtliches", "about": "Über uns", "features": "Funktionen", "privacy_policy": "Datenschutzrichtlinie", "terms_of_service": "Nutzungsbedingungen", "property_management": "Immobilienverwaltung"},
-  "dashboard": {"overview": "Übersicht", "properties": "Immobilien", "tenants": "Mieter", "settings": "Einstellungen", "logout": "Abmelden", "maintenance": "Wartung", "expenses": "Ausgaben", "cash_flow": "Cashflow", "reminders": "Erinnerungen", "approvals": "Genehmigungen", "users_invites": "Benutzer & Einladungen", "billing": "Abrechnung", "audit_log": "Audit-Protokoll", "admin_panel": "Admin-Panel", "monthly_revenue": "Monatliche Einnahmen", "total_properties": "Gesamte Immobilien", "active_tenants": "Aktive Mieter", "occupancy_rate": "Belegungsrate", "tenant_profile": "Mieterprofil", "lease_information": "Mietvertragsinformationen", "pending_approval_requests": "Ausstehende Genehmigungsanträge", "no_pending_requests": "Keine ausstehenden Anfragen", "manage_account_preferences": "Konto und Einstellungen verwalten", "profile_information": "Profilinformationen", "email_notifications": "E-Mail-Benachrichtigungen", "push_notifications": "Push-Benachrichtigungen", "automated_reminders": "Automatische Erinnerungen", "add_new_reminder": "Neue Erinnerung hinzufügen", "no_automated_reminders": "Keine automatischen Erinnerungen konfiguriert", "tenant": "Mieter", "next_send": "Nächster Versand", "frequency": "Häufigkeit"},
-  "landing": {"hero_title": "Die All-in-One-Plattform für modernes Immobilienmanagement", "hero_subtitle": "Automatisieren Sie Aufgaben, verfolgen Sie Finanzen und verwalten Sie Mieter mit Leichtigkeit.", "hero_cta": "Kostenlose Testversion starten", "real_stats_title": "Vertraut von Immobilienverwaltern weltweit", "properties_managed": "Verwaltete Immobilien", "active_users": "Aktive Benutzer", "countries_served": "Bediente Länder", "uptime_guarantee": "Verfügbarkeitsgarantie"},
-  "pricing": {"free": "Kostenlos", "choose_plan": "Plan wählen", "monthly": "Monatlich", "yearly": "Jährlich", "per_month": "pro Monat", "per_year": "pro Jahr", "most_popular": "Am beliebtesten", "get_started": "Loslegen", "contact_sales": "Vertrieb kontaktieren"},
-  "forms": {"street_address": "Straßenadresse", "required_field": "Dieses Feld ist erforderlich", "invalid_email": "Bitte geben Sie eine gültige E-Mail-Adresse ein", "password_too_short": "Passwort muss mindestens 8 Zeichen haben", "passwords_dont_match": "Passwörter stimmen nicht überein"},
-  "property": {"add_property": "Immobilie hinzufügen", "edit_property": "Immobilie bearbeiten", "property_name": "Immobilienname", "property_type": "Immobilientyp", "apartment": "Wohnung", "house": "Haus", "commercial": "Gewerbe", "other": "Andere", "rent_amount": "Mietbetrag", "security_deposit": "Kaution", "available_units": "Verfügbare Einheiten", "total_units": "Gesamte Einheiten"},
-  "tenant": {"add_tenant": "Mieter hinzufügen", "edit_tenant": "Mieter bearbeiten", "tenant_name": "Mietername", "lease_start": "Mietbeginn", "lease_end": "Mietende", "rent_due_date": "Miete fällig am", "late": "Verspätet", "id_front": "Ausweis Vorderseite", "id_back": "Ausweis Rückseite"},
-  "expense": {"add_expense": "Ausgabe hinzufügen", "edit_expense": "Ausgabe bearbeiten", "expense_category": "Ausgabenkategorie", "insurance": "Versicherung", "taxes": "Steuern", "salary": "Gehalt", "maintenance_repair": "Wartung & Reparatur", "utilities": "Nebenkosten", "advertising": "Werbung", "legal_professional": "Rechtliches & Professionell", "travel": "Reise", "office_supplies": "Bürobedarf"}
+  "header": {
+    "login": "Anmelden",
+    "get_started": "Loslegen"
+  },
+  "nav": {
+    "home": "Startseite",
+    "about": "Über uns",
+    "pricing": "Preise",
+    "contact": "Kontakt",
+    "login": "Anmelden"
+  },
+  "auth": {
+    "welcome_back": "Welcome Back!",
+    "sign_in_subtitle": "Sign in to continue to your dashboard",
+    "email_address": "Email Address",
+    "password": "Password",
+    "sign_in": "Sign In",
+    "continue_google": "Continue with Google",
+    "no_account": "Don't have an account?",
+    "sign_up": "Sign Up",
+    "or": "OR",
+    "forgot_password": "Forgot Password?",
+    "enter_email": "Enter your email address",
+    "enter_password": "Enter your password",
+    "remember_me": "Remember me",
+    "create_account": "Create Account",
+    "full_name": "Full Name",
+    "confirm_password": "Confirm Password",
+    "agree_terms": "I agree to the Terms of Service and Privacy Policy",
+    "agent": "Agent",
+    "check_email": "Check your email for verification link",
+    "create_password": "Create a strong password",
+    "enter_full_name": "Enter your full name",
+    "go_to_login": "Go to Login",
+    "have_account": "Already have an account?",
+    "join_thousands": "Join thousands of property managers",
+    "landlord": "Landlord",
+    "role": "Role",
+    "tenant": "Tenant",
+    "verification_sent": "Verification email sent"
+  },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "save": "Save",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "view": "View",
+    "close": "Close",
+    "confirm": "Confirm",
+    "yes": "Yes",
+    "no": "No",
+    "welcome_back_user": "Welcome back, {{name}}!",
+    "happening_today": "Here's what's happening with your properties today.",
+    "learn_more": "Learn More",
+    "analytics": "Analytics",
+    "payments": "Payments",
+    "actions": "Actions",
+    "status": "Status",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "country": "Country",
+    "date": "Date",
+    "amount": "Amount",
+    "description": "Description",
+    "type": "Type",
+    "active": "Active",
+    "inactive": "Inactive",
+    "pending": "Pending",
+    "approved": "Approved",
+    "rejected": "Rejected",
+    "all_languages": "All Languages",
+    "theme": "Theme",
+    "language": "Language",
+    "notifications": "Notifications",
+    "profile": "Profile",
+    "settings": "Settings",
+    "search": "Search...",
+    "filter": "Filters",
+    "clear_all": "Clear All",
+    "all": "All",
+    "more_options": "More Options",
+    "quick_links": "Quick Links",
+    "legal": "Legal",
+    "about": "About",
+    "features": "Features",
+    "privacy_policy": "Privacy Policy",
+    "terms_of_service": "Terms of Service",
+    "property_management": "Property Management"
+  },
+  "dashboard": {
+    "overview": "Overview",
+    "properties": "Properties",
+    "tenants": "Tenants",
+    "settings": "Settings",
+    "logout": "Logout",
+    "maintenance": "Maintenance",
+    "expenses": "Expenses",
+    "cash_flow": "Cash Flow",
+    "reminders": "Reminders",
+    "approvals": "Approvals",
+    "users_invites": "Users & Invites",
+    "billing": "Billing",
+    "audit_log": "Audit Log",
+    "admin_panel": "Admin Panel",
+    "monthly_revenue": "Monthly Revenue",
+    "total_properties": "Total Properties",
+    "active_tenants": "Active Tenants",
+    "occupancy_rate": "Occupancy Rate",
+    "loading_data": "Loading dashboard data...",
+    "overdue_rent_reminders": "Overdue Rent Reminders",
+    "send_reminder": "Send Reminder",
+    "no_overdue_rent": "No overdue rent payments",
+    "upcoming_lease_expirations": "Upcoming Lease Expirations",
+    "renew_lease": "Renew Lease",
+    "no_expiring_leases": "No expiring leases",
+    "financials_chart_title": "Financial Overview",
+    "rent_status_chart_title": "Rent Status",
+    "tenant_profile": "Tenant Profile",
+    "lease_information": "Lease Information",
+    "pending_approval_requests": "Pending Approval Requests",
+    "no_pending_requests": "No Pending Requests",
+    "manage_account_preferences": "Manage your account and preferences",
+    "profile_information": "Profile Information",
+    "email_notifications": "Email Notifications",
+    "push_notifications": "Push Notifications",
+    "automated_reminders": "Automated Reminders",
+    "add_new_reminder": "Add New Reminder",
+    "no_automated_reminders": "No Automated Reminders Configured",
+    "tenant": "Tenant",
+    "next_send": "Next Send",
+    "frequency": "Frequency",
+    "payments": "Payments"
+  },
+  "landing": {
+    "hero_title": "The All-in-One Platform for Modern Property Management",
+    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease.",
+    "hero_cta": "Start Your Free Trial",
+    "real_stats_title": "Trusted by Property Managers Worldwide",
+    "properties_managed": "Properties Managed",
+    "active_users": "Active Users",
+    "countries_served": "Countries Served",
+    "uptime_guarantee": "Uptime Guarantee"
+  },
+  "pricing": {
+    "free": "Free",
+    "choose_plan": "Choose Plan",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "per_month": "per month",
+    "per_year": "per year",
+    "most_popular": "Most Popular",
+    "get_started": "Get Started",
+    "contact_sales": "Contact Sales"
+  },
+  "services": {
+    "title": "Unsere Dienste",
+    "subtitle": "Umfassende Immobilienverwaltungslösungen",
+    "property_tracking_title": "Immobilien-Tracking",
+    "property_tracking_desc": "Verfolgen Sie alle Ihre Immobilien an einem Ort",
+    "rent_collection_title": "Mieteinzug",
+    "rent_collection_desc": "Automatischer Mieteinzug und Erinnerungen",
+    "tenant_management_title": "Mieterverwaltung",
+    "tenant_management_desc": "Verwalten Sie Mieter und Mietverträge"
+  },
+  "install_app": {
+    "title": "Unsere App Installieren",
+    "subtitle": "Native mobile Erfahrung erhalten"
+  },
+  "forms": {
+    "street_address": "Street Address",
+    "required_field": "This field is required",
+    "invalid_email": "Please enter a valid email address",
+    "password_too_short": "Password must be at least 8 characters",
+    "passwords_dont_match": "Passwords don't match"
+  },
+  "property": {
+    "add_property": "Add Property",
+    "edit_property": "Edit Property",
+    "property_name": "Property Name",
+    "property_type": "Property Type",
+    "apartment": "Apartment",
+    "house": "House",
+    "commercial": "Commercial",
+    "other": "Other",
+    "rent_amount": "Rent Amount",
+    "security_deposit": "Security Deposit",
+    "available_units": "Available Units",
+    "total_units": "Total Units",
+    "loading_properties": "Loading properties...",
+    "manage_portfolio": "Manage your property portfolio",
+    "view": "View",
+    "edit": "Edit",
+    "no_properties_yet": "No Properties Yet",
+    "add_first_property": "Add Your First Property",
+    "add_new_property": "Add New Property",
+    "address": "Address",
+    "city": "City",
+    "state": "State",
+    "zip_code": "Zip Code",
+    "click_to_upload": "Click to upload image",
+    "enter_property_name": "Enter property name",
+    "inactive": "Inactive",
+    "active": "Active",
+    "number_of_units": "Number of Units",
+    "property_image": "Property Image",
+    "save_property": "Save Property",
+    "street_address": "Street Address",
+    "units": "Units"
+  },
+  "tenant": {
+    "add_tenant": "Add Tenant",
+    "edit_tenant": "Edit Tenant",
+    "tenant_name": "Tenant Name",
+    "lease_start": "Lease Start",
+    "lease_end": "Lease End",
+    "rent_due_date": "Rent Due Date",
+    "late": "Late",
+    "id_front": "ID Front",
+    "id_back": "ID Back"
+  },
+  "expense": {
+    "add_expense": "Add Expense",
+    "edit_expense": "Edit Expense",
+    "expense_category": "Expense Category",
+    "insurance": "Insurance",
+    "taxes": "Taxes",
+    "salary": "Salary",
+    "maintenance_repair": "Maintenance & Repair",
+    "utilities": "Utilities",
+    "advertising": "Advertising",
+    "legal_professional": "Legal & Professional",
+    "travel": "Travel",
+    "office_supplies": "Office Supplies"
+  }
 }
