--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -1,4 +1,6 @@
 {
+  "app_name": "HNV প্রপার্টি ম্যানেজমেন্ট সলিউশনস",
+  "app_name_short": "HNV সলিউশনস",
   "header": {
     "login": "লগইন",
     "get_started": "শুরু করুন"
@@ -6,9 +8,12 @@
   "nav": {
     "home": "হোম",
     "about": "সম্পর্কে",
+    "features": "বৈশিষ্ট্য",
+    "services": "সেবা",
     "pricing": "মূল্য",
     "contact": "যোগাযোগ",
-    "login": "লগইন"
+    "login": "লগইন",
+    "dashboard": "ড্যাশবোর্ড"
   },
   "auth": {
     "welcome_back": "স্বাগতম!",
@@ -47,6 +52,8 @@
     "confirm": "নিশ্চিত",
     "yes": "হ্যাঁ",
     "no": "না",
+    "welcome_back_user": "স্বাগতম, {{name}}!",
+    "happening_today": "আজ আপনার সম্পত্তিগুলির সাথে যা ঘটছে।",
     "name": "নাম",
     "email": "ইমেইল",
     "phone": "ফোন",
@@ -94,7 +101,11 @@
     "total_properties": "মোট সম্পত্তি",
     "active_tenants": "সক্রিয় ভাড়াটিয়া",
     "occupancy_rate": "দখলের হার",
-    "payments": "পেমেন্ট"
+    "payments": "পেমেন্ট",
+    "welcome_message": "আপনার ড্যাশবোর্ডে স্বাগতম",
+    "good_morning": "সুপ্রভাত",
+    "good_afternoon": "শুভ বিকাল",
+    "good_evening": "শুভ সন্ধ্যা"
   },
   "hero": {
     "title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য সর্বাত্মক প্ল্যাটফর্ম",
@@ -113,7 +124,18 @@
     "countries_served": "সেবা প্রদানকৃত দেশ",
     "uptime_guarantee": "আপটাইম গ্যারান্টি"
   },
+  "about": {
+    "title": "আমাদের সম্পর্কে",
+    "subtitle": "উদ্ভাবনী প্রযুক্তির সাথে সম্পত্তি ব্যবস্থাপনায় বিপ্লব",
+    "description": "আমরা সবচেয়ে ব্যাপক এবং ব্যবহারকারী-বান্ধব সম্পত্তি ব্যবস্থাপনা সমাধান প্রদান করতে প্রতিশ্রুতিবদ্ধ।"
+  },
+  "features": {
+    "title": "শক্তিশালী বৈশিষ্ট্য",
+    "subtitle": "দক্ষতার সাথে সম্পত্তি পরিচালনার জন্য আপনার প্রয়োজনীয় সবকিছু"
+  },
   "pricing": {
+    "title": "সহজ, স্বচ্ছ মূল্য",
+    "subtitle": "আপনার প্রয়োজন অনুযায়ী পরিকল্পনা বেছে নিন",
     "free": "বিনামূল্যে",
     "choose_plan": "পরিকল্পনা নির্বাচন করুন",
     "monthly": "মাসিক",
@@ -133,6 +155,15 @@
     "rent_collection_desc": "স্বয়ংক্রিয় ভাড়া সংগ্রহ এবং অনুস্মারক",
     "tenant_management_title": "ভাড়াটিয়া ব্যবস্থাপনা",
     "tenant_management_desc": "ভাড়াটিয়া এবং লিজ চুক্তি পরিচালনা করুন"
+  },
+  "contact": {
+    "title": "যোগাযোগ করুন",
+    "subtitle": "আমরা আপনার কাছ থেকে শুনতে চাই। আমাদের একটি বার্তা পাঠান।",
+    "name": "নাম",
+    "email": "ইমেইল",
+    "subject": "বিষয়",
+    "message": "বার্তা",
+    "send_message": "বার্তা পাঠান"
   },
   "property": {
     "add_property": "সম্পত্তি যোগ করুন",
@@ -169,5 +200,13 @@
     "maintenance_repair": "রক্ষণাবেক্ষণ ও মেরামত",
     "utilities": "ইউটিলিটি",
     "advertising": "বিজ্ঞাপন"
+  },
+  "footer": {
+    "company_description": "বিশ্বব্যাপী হাজার হাজার সম্পত্তি ব্যবস্থাপকদের দ্বারা বিশ্বস্ত নেতৃস্থানীয় সম্পত্তি ব্যবস্থাপনা প্ল্যাটফর্ম।",
+    "quick_links": "দ্রুত লিঙ্ক",
+    "support": "সহায়তা",
+    "legal": "আইনি",
+    "follow_us": "আমাদের অনুসরণ করুন",
+    "all_rights_reserved": "সমস্ত অধিকার সংরক্ষিত"
   }
 }
